--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
     padding: 10px;
 }
 
+
 section p {
     padding: 15px;
     width: 50%;
@@ -37,7 +38,17 @@ section p {
     font-size: 20px;
 }
 
+div {
+    padding: 10px;
+}
 section button {
     padding: 10px;
 }
 
+#answerBtn {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+    margin-left: 10px;
+}
