--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ section button {
     margin-top: 20px;
 }
 
+#savedScore {
+    text-align: center;
+}
+
 li {
     text-align: center;
     margin-top: 10px;
